	  CodeSourcery) is used. This can be a serious problem and can cause
	  crashes on Cortex-M3 if the ARM libgcc is used, for example.  The fix 
	  is to include ARCHCPUFLAGS on the gcc command line when asking it to
	  -print-libgcc-file-name.
	* lib/time/lib_gmtimer.c:  Correct several calculations that could lead
	  to errors in dates.
	* drivers/pm: Add the beginnings of a NuttX power management sub-system.
	* arch/arm/src/stm32/stm32_irq.c:  Fix a error introduced in 6.8.
	  Timeout calculation uses clock_settime() instead of clock_gettime().
	  Pretty gross error, but actually it works with the side effect of setting
	  a bad time.
	* drivers/mtd/at24xx.c: Driver for I2C-based at24cxx EEPROM submitted by
	  Li Zhuoyi (Lzyy).
	* arch/arm/src/lpc17xx/lpc17_i2c.c: I2C driver for the NXP LPC17xx family
	  submitted by Li Zhuoyi (Lzyy)
	* arch/arm/src/stm32_i2c.c:  Correct two issues with the STM32 I2C driver:
	  (1) Clocking needs to be based on PCLK1, not HCLK and fast speed settings
	  need some additional bits; and (2) Correct a hang that will occur on
	  I2C1 if FSMC is also enabled.
	* drivers/sensors/lm75.c and include/nuttx/sensors/lm75.h:  Add an LM-75
	  temperature sensor driver.
	* configs/stm3210e-eval/src/up_lm75.c:  Add support for the LM-75 on the
	  STMicro STM3210E-EVAL board.
	* sched/clock_gettime.c:  Correct an error in the tv_nsec calculation
	  that happens only config CONFIG_RTC is enabled.
	* arch/arm/src/stm32/stm32_i2c.c:  Correct some bugs related to waiting
	  to the I2C STOP condition to be cleared.

6.10 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* lib/stdio/lib_fopen.c:  Fix an error in fopen(); the file pointer was not
	  being positioned at the end of the file when the "a" and "a+" modes are
	  used.  There are other issues with the "a+" modes (see the top-level TODO
	  list).
	* drivers/usbdev/cdc_serial.c and include/nuttx/usb/cdc.h and cdc_serial.h:
	  Add support for the CDC ACM serial device class.